[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "layersentinel"
version = "0.1.0"
description = "LayerSentinel uses Nmap scan results to investigate rogue devices."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
layersentinel = "rogue_device_detector.cli:main"

[tool.setuptools.packages.find]
include = ["rogue_device_detector*"]
